# cRUSTyCrab

./: .gitignore  Cargo.toml  README.md  movable_legs.pdn
assets/: ferris_sprite_sheet.pdn
src/: autorunner.rs  main.rs
