[package]
name = "cRUSTyCrab"
version = "0.1.0"
edition = "2021"

#Enable some optimization in debug mode
[profile.dev]
opt-level = 1

#Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.13.2"
bevy_rapier2d = "0.26.0"
rand = "0.8.5"

[profile.dev.package."*"]
opt-level = 3
